# ShApp

./: App.py  pyproject.toml
data/raw/: products.csv  rewe_products.csv
references/: SHAPP_PLAN.md  content-checklist
src/: koro_fetch.py  rewe_fetch.py  shopify_fetch.py
