[project]
name = "datalumina-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.111.0",
    "beautifulsoup4>=4.15.0",
    "playwright>=1.60.0",
    "playwright-stealth>=2.0.3",
    "python-dotenv>=1.1.1",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
]
